// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ogf verify should report the census and findings of the sweep 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "ogf",
    "verify",
  ],
  "duration": "<duration>",
  "error": "Verify error: Verification of ogf visuals did not complete, status: incomplete",
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 1,
  "outcome": "executionFailed",
  "result": {
    "checks": [
      {
        "duration": "<duration>",
        "findings": [],
        "id": "read",
        "status": "passed",
      },
      {
        "duration": "<duration>",
        "findings": [
          {
            "message": "Carries no geometry chunk",
            "ruleId": "visuals.geometry.unsupported",
            "subject": "residue_split_motion_ref.ogf#0",
          },
        ],
        "id": "geometry",
        "status": "incomplete",
      },
      {
        "duration": "<duration>",
        "findings": [],
        "id": "bounds",
        "status": "passed",
      },
      {
        "duration": "<duration>",
        "findings": [
          {
            "message": "'wpn\\wpn_bolt' does not resolve under <resources>/gamedata",
            "ruleId": "visuals.textures.missing",
            "subject": "dev_bolt_hud.ogf#0",
          },
          {
            "message": "'item\\item_notes' does not resolve under <resources>/gamedata",
            "ruleId": "visuals.textures.missing",
            "subject": "notes_paper_1.ogf#0",
          },
          {
            "message": "'glow\\glow_ghost' does not resolve under <resources>/gamedata",
            "ruleId": "visuals.textures.missing",
            "subject": "part_none.ogf#0",
          },
          {
            "message": "'wpn\\wpn_pm' does not resolve under <resources>/gamedata",
            "ruleId": "visuals.textures.missing",
            "subject": "wpn_pm_lod.ogf#0",
          },
        ],
        "id": "textures",
        "status": "incomplete",
      },
    ],
    "status": "incomplete",
  },
}
`;

exports[`ogf verify should resolve textures from a layered root 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Verify error: Verification of ogf visuals did not complete, status: incomplete",
  ],
  "stdout": [
    "Verifying ogf visuals in <resources>/gamedata/meshes/ogf",
    "Searching textures in <resources>/base as well",
    "Swept 5 visuals in <duration>",
    "Submeshes: 5 total, 4 packed, 1 unsupported, 0 malformed",
    "Progressive submeshes: 1, of which 1 draw only part of their index buffer",
    "Skinned submeshes: 4, vertices whose weights do not sum to one: 0",
    "Unreadable files: 0, files with nothing drawable: 1, bounds disagreements: 0",
    "Texture references: 4 total, 1 resolved, 3 missing, 0 unreadable, 0 visuals with no root",
    "Distinct textures: 1, of which 1 carry no mip chain; 0 references resolved inside archives and were not read",
    "Header versions: 4: 5",
    "Root model types: MT_SKELETON_ANIM: 2, MT_SKELETON_RIGID: 3",
    "Submesh model types: MT_SKELETON_ANIM: 1, MT_SKELETON_GEOMDEF_PM: 1, MT_SKELETON_GEOMDEF_ST: 3",
    "Vertex formats: 0x00000001: 4, none: 1",
    "Texture formats: DXT5: 1",
    "Textures resolved by: <resources>/base: 1",
    "Texture sizes: 4x4: 1",
    "Check 'geometry' is incomplete with 1 findings",
    "Check 'textures' is incomplete with 3 findings",
  ],
}
`;

exports[`ogf verify should sweep a directory 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Verify error: Verification of ogf visuals did not complete, status: incomplete",
  ],
  "stdout": [
    "Verifying ogf visuals in <resources>/gamedata/meshes/ogf",
    "Swept 5 visuals in <duration>",
    "Submeshes: 5 total, 4 packed, 1 unsupported, 0 malformed",
    "Progressive submeshes: 1, of which 1 draw only part of their index buffer",
    "Skinned submeshes: 4, vertices whose weights do not sum to one: 0",
    "Unreadable files: 0, files with nothing drawable: 1, bounds disagreements: 0",
    "Texture references: 4 total, 0 resolved, 4 missing, 0 unreadable, 0 visuals with no root",
    "Distinct textures: 0, of which 0 carry no mip chain; 0 references resolved inside archives and were not read",
    "Header versions: 4: 5",
    "Root model types: MT_SKELETON_ANIM: 2, MT_SKELETON_RIGID: 3",
    "Submesh model types: MT_SKELETON_ANIM: 1, MT_SKELETON_GEOMDEF_PM: 1, MT_SKELETON_GEOMDEF_ST: 3",
    "Vertex formats: 0x00000001: 4, none: 1",
    "Check 'geometry' is incomplete with 1 findings",
    "Check 'textures' is incomplete with 4 findings",
  ],
}
`;

exports[`ogf verify should verify a standalone visual 1`] = `
{
  "exitCode": 1,
  "stderr": [
    "Error: Verify error: Verification of ogf visuals did not complete, status: incomplete",
  ],
  "stdout": [
    "Verifying ogf visuals in <resources>/gamedata/meshes/ogf/wpn_pm_lod.ogf",
    "Swept 1 visuals in <duration>",
    "Submeshes: 1 total, 1 packed, 0 unsupported, 0 malformed",
    "Progressive submeshes: 0, of which 0 draw only part of their index buffer",
    "Skinned submeshes: 1, vertices whose weights do not sum to one: 0",
    "Unreadable files: 0, files with nothing drawable: 0, bounds disagreements: 0",
    "Texture references: 1 total, 0 resolved, 1 missing, 0 unreadable, 0 visuals with no root",
    "Distinct textures: 0, of which 0 carry no mip chain; 0 references resolved inside archives and were not read",
    "Header versions: 4: 1",
    "Root model types: MT_SKELETON_RIGID: 1",
    "Submesh model types: MT_SKELETON_GEOMDEF_ST: 1",
    "Vertex formats: 0x00000001: 1",
    "Check 'textures' is incomplete with 1 findings",
  ],
}
`;

exports[`ogf verify should write a report 1`] = `
[
  {
    "path": "report.json",
    "sha256": "4e021fc50da1e2d3962cc296fdac5b18f0aee2228c3f27b4a8304bb195946f45",
    "size": 2193,
  },
]
`;
